// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. video marked as sky sports 1`] = `
<div
  style={
    Object {
      "height": 200,
      "width": 300,
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      style="6771a235eb9a0811f00cb88ceea31b78"
    >
      <div>
        Premier League clips powered by Sky Sports
      </div>
      <div
        style={
          Object {
            "height": "17px",
            "marginTop": "7px",
            "width": "80px",
          }
        }
      >
        <div
          style="ca94d3d8b1d6ecedc1f387601fe4065b"
        />
        <img />
      </div>
    </div>
    <video
      style={
        Object {
          "height": 200,
          "width": 300,
        }
      }
    />
  </div>
</div>
`;

exports[`2. 360 video 1`] = `
<div
  style={
    Object {
      "height": 200,
      "width": 300,
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div>
      <IconVideo360Player />
    </div>
    <video
      style={
        Object {
          "height": 200,
          "width": 300,
        }
      }
    />
  </div>
</div>
`;
